--- a/index.ipynb
+++ b/index.ipynb
@@ -58,7 +58,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def number_of_destinations():\n",
-    "    num = range(0,len(travel_destinations))\n",
+    "    num = len(travel_destinations)\n",
     "    return num\n",
     "    "
    ]
