--- a/index.ipynb
+++ b/index.ipynb
@@ -158,7 +158,8 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
     "    travel_destinations.append('madagascar')\n",
-    "    return 'madagascar'"
+    "    return 'madagascar'\n",
+    "    re"
    ]
   },
   {
