--- a/index.ipynb
+++ b/index.ipynb
@@ -159,7 +159,7 @@
     "def favorite_destination():\n",
     "    travel_destinations.append('madagascar')\n",
     "    return 'madagascar'\n",
-    "    re"
+    "    return travel_destinations"
    ]
   },
   {
