--- a/index.ipynb
+++ b/index.ipynb
@@ -226,9 +226,9 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    travel_destinations\n",
+    "    travel_destinations = []\n",
     "    for destination in travel_destinations:\n",
-    "        destination.title()\n",
+    "        travdestination.title()\n",
     "    return travel_destinations\n",
     "        "
    ]
