--- a/index.ipynb
+++ b/index.ipynb
@@ -228,7 +228,7 @@
     "def capitalize_countries():\n",
     "    travel_destinations = []\n",
     "    for destination in travel_destinations:\n",
-    "        travdestination.title()\n",
+    "        travel_destinations.append(destination.title())\n",
     "    return travel_destinations\n",
     "        "
    ]
