--- a/index.ipynb
+++ b/index.ipynb
@@ -226,7 +226,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    travel_destinations = []\n",
+    "    capitalized_countri = []\n",
     "    for destination in travel_destinations:\n",
     "        travel_destinations.append(destination.title())\n",
     "    return travel_destinations\n",
