--- a/index.ipynb
+++ b/index.ipynb
@@ -226,9 +226,9 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    capitalized_countri = []\n",
+    "    capitalized_countries = []\n",
     "    for destination in travel_destinations:\n",
-    "        travel_destinations.append(destination.title())\n",
+    "        capitalized_countries.append(destination.title())\n",
     "    return travel_destinations\n",
     "        "
    ]
