--- a/index.ipynb
+++ b/index.ipynb
@@ -229,7 +229,7 @@
     "    capitalized_countries = []\n",
     "    for destination in travel_destinations:\n",
     "        capitalized_countries.append(destination.title())\n",
-    "    return travel_destinations\n",
+    "    return capitaliz\n",
     "        "
    ]
   },
