--- a/index.ipynb
+++ b/index.ipynb
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,22 +229,22 @@
     "    capitalized_countries = []\n",
     "    for destination in travel_destinations:\n",
     "        capitalized_countries.append(destination.title())\n",
-    "    return capitaliz\n",
+    "    return capitalized_countries\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']"
+       "['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,16 +262,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia', 'japan']"
+       "['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia', 'Japan']"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
